add hero image to index

--- a/Index.html
+++ b/Index.html
@@ -36,6 +36,9 @@
   </header>
  
   <main>
+    <section class="hero">
+      <img src="/assets/images/hero.jpg" alt="a picture of two people training in a gym">
+    </section>
   </main>
 
   <footer>
