add hero section image to index

--- a/Index.html
+++ b/Index.html
@@ -36,8 +36,8 @@
   </header>
  
   <main>
-    <section class="hero">
-      <img src="/assets/images/hero.jpg" alt="a picture of two people training in a gym">
+    <section id="hero-section">
+      
     </section>
   </main>
 
