add index page content

--- a/Index.html
+++ b/Index.html
@@ -39,6 +39,37 @@
     <section id="hero-section">
       <p>Welcome to Pure Drive Fitness</p>
     </section>
+
+    <section id="top-tag">
+      <h3>What can I help with today?</h3>
+    </section>
+  
+      <section id="main-links">
+        <div>
+          <a href="help.html#tone">
+            <p class="tag"><i class="fa-solid fa-dumbbell rounded-logo"></i> Tone</p>    
+          </a>
+        </div>
+        <div>
+          <a href="help.html#nutrition">
+            <p class="tag">Nutrition <i class="fa-solid fa-utensils rounded-logo"></i></p> 
+          </a>
+        </div>
+        <div>
+          <a href="help.html#weight">
+            <p class="tag"><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p>
+          </a>
+        </div>
+        <div>
+          <a href="help.html#train">
+            <p class="tag">Train <i class="fa-solid fa-stopwatch rounded-logo"></i></p>
+          </a>
+        </div>
+      </section>
+  
+    <section id="bottom-tag"> 
+      <a href="help.html"><h4>Click here to find out how <i class="fa-solid fa-computer-mouse"></i></h4></a>
+    </section>
   </main>
 
   <footer>
