add index content styling

--- a/Index.html
+++ b/Index.html
@@ -35,14 +35,15 @@
       </nav>
   </header>
  
-  <main>
+  <section>
     <section id="hero-section">
       <p>Welcome to Pure Drive Fitness</p>
     </section>
 
-    <section id="top-tag">
-      <h3>What can I help with today?</h3>
-    </section>
+    <section id="index-body"
+      <div id="top-tag">
+        <h3>What can I help with today?</h3>
+      </div>
   
       <section id="main-links">
         <div>
@@ -67,8 +68,9 @@
         </div>
       </section>
   
-    <section id="bottom-tag"> 
-      <a href="help.html"><h4>Click here to find out how <i class="fa-solid fa-computer-mouse"></i></h4></a>
+      <div id="bottom-tag"> 
+        <a href="help.html"><h4>Click here to find out how <i class="fa-solid fa-computer-mouse"></i></h4></a>
+      </div>
     </section>
   </main>
 
