justify content on index

--- a/Index.html
+++ b/Index.html
@@ -51,7 +51,7 @@
             <p class="tag"><i class="fa-solid fa-dumbbell rounded-logo"></i> Tone</p>    
           </a>
         </div>
-        <div>
+        <div class="right">
           <a href="help.html#nutrition">
             <p class="tag">Nutrition <i class="fa-solid fa-utensils rounded-logo"></i></p> 
           </a>
@@ -61,7 +61,7 @@
             <p class="tag"><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p>
           </a>
         </div>
-        <div>
+        <div class="right">
           <a href="help.html#train">
             <p class="tag">Train <i class="fa-solid fa-stopwatch rounded-logo"></i></p>
           </a>
