add testimonial to index

--- a/Index.html
+++ b/Index.html
@@ -48,25 +48,30 @@
       <section id="main-links">
         <div>
           <a href="help.html#tone">
-            <p class="tag"><i class="fa-solid fa-dumbbell rounded-logo"></i> Tone</p>    
+            <p><i class="fa-solid fa-dumbbell rounded-logo"></i> Tone</p>    
           </a>
         </div>
         <div class="right">
           <a href="help.html#nutrition">
-            <p class="tag">Nutrition <i class="fa-solid fa-utensils rounded-logo"></i></p> 
+            <p>Nutrition <i class="fa-solid fa-utensils rounded-logo"></i></p> 
           </a>
         </div>
         <div>
           <a href="help.html#weight">
-            <p class="tag"><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p>
+            <p><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p>
           </a>
         </div>
         <div class="right">
-          <a href="help.html#train">
-            <p class="tag">Train <i class="fa-solid fa-stopwatch rounded-logo"></i></p>
+          <a href="help.html#training">
+            <p>Training <i class="fa-solid fa-stopwatch rounded-logo"></i></p>
           </a>
         </div>
       </section>
+      
+      <div class="testimonial">
+        <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>
+      </div>
+
     </section>
   </main>
 
