tidy indentation and styling on index

--- a/Index.html
+++ b/Index.html
@@ -34,44 +34,39 @@
         </ul>
       </nav>
   </header>
- 
-  <section>
+
+  <main>
     <section id="hero-section">
       <p>Welcome to Pure Drive Fitness</p>
     </section>
 
-    <section id="index-body"
-      <div id="top-tag">
-        <h3>What can I help with today?</h3>
-      </div>
-  
-      <section id="main-links">
-        <div>
-          <a href="help.html#tone">
-            <p><i class="fa-solid fa-dumbbell rounded-logo"></i> Tone</p>    
-          </a>
+    <section id="index-body">
+      <h3>What can I help with today?</h3>
+        <div id="main-links">
+          <div>
+            <a href="help.html#tone">
+              <p><i class="fa-solid fa-dumbbell rounded-logo"></i> Tone</p>                
+            </a>
+          </div>
+          <div class="right">
+            <a href="help.html#nutrition">
+              <p>Nutrition <i class="fa-solid fa-utensils rounded-logo"></i></p> 
+            </a>
+          </div>
+          <div>
+            <a href="help.html#weight">
+              <p><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p>
+            </a>
+          </div>
+          <div class="right">
+            <a href="help.html#training">
+              <p>Training <i class="fa-solid fa-stopwatch rounded-logo"></i></p>          
+            </a>
+          </div>
         </div>
-        <div class="right">
-          <a href="help.html#nutrition">
-            <p>Nutrition <i class="fa-solid fa-utensils rounded-logo"></i></p> 
-          </a>
-        </div>
-        <div>
-          <a href="help.html#weight">
-            <p><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p>
-          </a>
-        </div>
-        <div class="right">
-          <a href="help.html#training">
-            <p>Training <i class="fa-solid fa-stopwatch rounded-logo"></i></p>
-          </a>
-        </div>
-      </section>
-      
       <div class="testimonial">
-        <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>
+        <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>   
       </div>
-
     </section>
   </main>
 
@@ -80,6 +75,5 @@
       <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
       <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-x-twitter trans"></i></a>
   </footer>
-
 </body>
 </html>
