add tone help section

--- a/help.html
+++ b/help.html
@@ -36,7 +36,10 @@
   </header>
 
   <main>
-    
+    <section>  
+        <div class="overlay-text"><h2>Tone</h2>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</div>    
+      </div>  
+    </section>
   </main>
 
   <footer>
