--- a/help.html
+++ b/help.html
@@ -37,8 +37,10 @@
 
   <main>
     <section>  
-        <div class="overlay-text"><h2>Tone</h2>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</div>    
-      </div>  
+      <div class="overlay-text"><h2>Tone</h2>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</div>
+    </section>
+    <section>
+      <div class="overlay-text"><h2>Nutrition</h2>You cannot outtrain a bad diet, but what is a good diet?</div>      
     </section>
   </main>
 
