add weight loss help section

--- a/help.html
+++ b/help.html
@@ -42,6 +42,10 @@
     <section>
       <div class="overlay-text"><h2>Nutrition</h2>You cannot outtrain a bad diet, but what is a good diet?</div>      
     </section>
+    <section>
+      <div class="overlay-text"><h2>Weight loss</h2>Fad diets never produce long term losses, a tailored plan to suit your lifestyle will</div>
+    </section>
+
   </main>
 
   <footer>
