add train help section

--- a/help.html
+++ b/help.html
@@ -45,7 +45,9 @@
     <section>
       <div class="overlay-text"><h2>Weight loss</h2>Fad diets never produce long term losses, a tailored plan to suit your lifestyle will</div>
     </section>
-
+    <section>
+      <div class="overlay-text"><h2>Train</h2>Want to beat your PB or train for an event?</div>       
+    </section>
   </main>
 
   <footer>
