resize help images

--- a/help.html
+++ b/help.html
@@ -35,7 +35,7 @@
       </nav>
   </header>
 
-  <main>
+  <main-help>
     <section>
       <img src="assets/images/tone.jpg" alt="a person with no excess weight">
       <div class="overlay-text"><h2>Tone</h2>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</div>
@@ -52,7 +52,7 @@
       <img src="assets/images/train.jpg" alt="a man running">
       <div class="overlay-text"><h2>Train</h2>Want to beat your PB or train for an event?</div>       
     </section>
-  </main>
+  </main-help>
 
   <footer>
       <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
