add testimonial text to help page

--- a/help.html
+++ b/help.html
@@ -52,6 +52,9 @@
       <img src="assets/images/train.jpg" alt="a man running">
       <div class="overlay-text"><h2>Train</h2>Want to beat your PB or train for an event?</div>       
     </section>
+    <div class="testimonial">
+      <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>   
+    </div>
   </main-help>
 
   <footer>
