--- a/help.html
+++ b/help.html
@@ -36,19 +36,19 @@
   </header>
 
   <main-help>
-    <section>
+    <section class="help-block">
       <img src="assets/images/tone.jpg" alt="a person with no excess weight">
       <div class="overlay-text"><h2>Tone</h2>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</div>
     </section>
-    <section>
+    <section class="help-block">
       <img src="assets/images/nutrition.jpg" alt="a picture of a healthy meal">
       <div class="overlay-text"><h2>Nutrition</h2>You cannot outtrain a bad diet, but what is a good diet?</div>      
     </section>
-    <section>
+    <section class="help-block">
       <img src="assets/images/weight.jpg" alt="a girl showing she has lost weight">
       <div class="overlay-text"><h2>Weight loss</h2>Fad diets never produce long term losses, a tailored plan to suit your lifestyle will</div>
     </section>
-    <section>
+    <section class="help-block">
       <img src="assets/images/train.jpg" alt="a man running">
       <div class="overlay-text"><h2>Train</h2>Want to beat your PB or train for an event?</div>       
     </section>
