add nav link at bottom of help page

--- a/help.html
+++ b/help.html
@@ -55,6 +55,9 @@
     <div class="testimonial">
       <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>   
     </div>
+    <section id="bottom-tag"> 
+      <a href="about.html"><h4>Click here to find out about me <i class="fa-solid fa-computer-mouse"></i></h4></a>
+    </section>
   </main-help>
 
   <footer>
