change testimonial text to a motivational quote

--- a/help.html
+++ b/help.html
@@ -53,7 +53,7 @@
       <div class="overlay-text"><h2>Train</h2>Want to beat your PB or train for an event?</div>       
     </section>
     <div class="testimonial">
-      <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>   
+      <p>"The moment you commit to something is the moment you achieve it"</p>   
     </div>
     <section id="bottom-tag"> 
       <a href="about.html"><h4>Click here to find out about me <i class="fa-solid fa-computer-mouse"></i></h4></a>
