style accreditation section

--- a/help.html
+++ b/help.html
@@ -44,6 +44,12 @@
       <img src="assets/images/nutrition.jpg" alt="a picture of a healthy meal">
       <div class="overlay-text"><h3>Nutrition</h3>You cannot outtrain a bad diet, but what is a good diet?</div>      
     </section>
+    <section class="accreditation">
+      <img src="assets/images/accreditations/action.png" alt="the action logo">
+      <img src="assets/images/accreditations/issa.png" alt="the issa logo">
+      <img src="assets/images/accreditations/nasm.png" alt="the nasm logo">
+      <img src="assets/images/accreditations/reps.png" alt="the reps logo">
+    </section>
     <section class="help-block" id="weight">
       <img src="assets/images/weight.jpg" alt="a girl showing she has lost weight">
       <div class="overlay-text"><h3>Weight loss</h3>Fad diets never produce long term losses, a tailored plan to suit your lifestyle will</div>
