style accreditations on help page

--- a/help.html
+++ b/help.html
@@ -45,10 +45,13 @@
       <div class="overlay-text"><h3>Nutrition</h3>You cannot outtrain a bad diet, but what is a good diet?</div>      
     </section>
     <section class="accreditation">
-      <img src="assets/images/accreditations/action.png" alt="the action logo">
-      <img src="assets/images/accreditations/issa.png" alt="the issa logo">
-      <img src="assets/images/accreditations/nasm.png" alt="the nasm logo">
-      <img src="assets/images/accreditations/reps.png" alt="the reps logo">
+      <p>Expertise and knowledge is provided by these accreditations</p>
+      <section class="accreditation-img">  
+        <img src="assets/images/accreditations/action.png" alt="the action logo">
+        <img src="assets/images/accreditations/issa.png" alt="the issa logo">
+        <img src="assets/images/accreditations/nasm.png" alt="the nasm logo">
+        <img src="assets/images/accreditations/reps.png" alt="the reps logo">
+      </section>
     </section>
     <section class="help-block" id="weight">
       <img src="assets/images/weight.jpg" alt="a girl showing she has lost weight">
