--- a/help.html
+++ b/help.html
@@ -36,6 +36,7 @@
   </header>
 
   <main-help>
+    <p>Whatever type of help you want, success rates are always better when it is targetted, so, what do you want to focus on?</p>
     <section class="help-block" id="tone">
       <img src="assets/images/tone.jpg" alt="a person with no excess weight">
       <div class="overlay-text"><h3>Tone</h3>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</div>
