further text styling on help page

--- a/help.html
+++ b/help.html
@@ -36,6 +36,7 @@
   </header>
 
   <main-help>
+    <h3>What do you want help with?</h3>
     <p>Whatever type of help you want, success rates are always better when it is targetted, so, what do you want to focus on?</p>
     <section class="help-block" id="tone">
       <img src="assets/images/tone.jpg" alt="a person with no excess weight">
@@ -43,7 +44,7 @@
     </section>
     <section class="help-block" id="nutrition">
       <img src="assets/images/nutrition.jpg" alt="a picture of a healthy meal">
-      <div class="overlay-text"><h3>Nutrition</h3>You cannot outtrain a bad diet, but what is a good diet?</div>      
+      <div class="overlay-text"><h3>Nutrition</h3>You cannot out-train a bad diet, but what is a good diet?</div>      
     </section>
     <section class="accreditation">
       <p>Expertise and knowledge is provided by these accreditations</p>
