align items on help screen

--- a/help.html
+++ b/help.html
@@ -35,41 +35,41 @@
       </nav>
   </header>
 
-  <main-help>
-    <h3>What do you want help with?</h3>
+  <main>
+    <h2>What do you want help with?</h2>
     <p>Whatever type of help you want, success rates are always better when it is targetted, so, what do you want to focus on?</p>
-    <section class="help-block" id="tone">
+    <div class="help-block" id="tone">
       <img src="assets/images/tone.jpg" alt="a person with no excess weight">
       <div class="overlay-text"><h3>Tone</h3>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</div>
-    </section>
-    <section class="help-block" id="nutrition">
+    </div>
+    <div class="help-block" id="nutrition">
       <img src="assets/images/nutrition.jpg" alt="a picture of a healthy meal">
       <div class="overlay-text"><h3>Nutrition</h3>You cannot out-train a bad diet, but what is a good diet?</div>      
-    </section>
-    <section class="accreditation">
+    </div>
+    <div class="accreditation">
       <p>Expertise and knowledge is provided by these accreditations</p>
-      <section class="accreditation-img">  
+      <div class="accreditation-img">  
         <img src="assets/images/accreditations/action.png" alt="the action logo">
         <img src="assets/images/accreditations/issa.png" alt="the issa logo">
         <img src="assets/images/accreditations/nasm.png" alt="the nasm logo">
         <img src="assets/images/accreditations/reps.png" alt="the reps logo">
-      </section>
-    </section>
-    <section class="help-block" id="weight">
+      </div>
+    </div>
+    <div class="help-block" id="weight">
       <img src="assets/images/weight.jpg" alt="a girl showing she has lost weight">
-      <div class="overlay-text"><h3>Weight loss</h3>Fad diets never produce long term losses, a tailored plan to suit your lifestyle will</div>
-    </section>
-    <section class="help-block" id="training">
+      <div class="overlay-text"><h3>Weight loss</h3>Fad diets never produce long term results, a tailored plan to suit your lifestyle will</div>
+    </div>
+    <div class="help-block" id="training">
       <img src="assets/images/train.jpg" alt="a man running">
       <div class="overlay-text"><h3>Train</h3>Want to beat your PB or train for an event?</div>       
-    </section>
+    </div>
     <div class="testimonial">
       <p>"The moment you commit to something is the moment you achieve it"</p>   
     </div>
-    <section id="bottom-tag"> 
+    <div id="bottom-tag"> 
       <a href="about.html"><h4>Click here to find out about me <i class="fa-solid fa-computer-mouse"></i></h4></a>
-    </section>
-  </main-help>
+    </div>
+  </main>
 
   <footer>
       <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
