correct tags to fix styling bug

--- a/help.html
+++ b/help.html
@@ -35,7 +35,7 @@
       </nav>
   </header>
 
-  <main>
+  <main id="main-help">
     <h2>What do you want help with?</h2>
     <p>Whatever type of help you want, success rates are always better when it is targetted, so, what do you want to focus on?</p>
     <div class="help-block" id="tone">
