add booking page and fix nav

--- a/book.html
+++ b/book.html
@@ -26,48 +26,18 @@
     <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
         <ul>
-          <li class="trans-right"><a href="index.html" class="active">Home</a></li>
+          <li class="trans-right"><a href="index.html">Home</a></li>
           <li class="trans-right"><a href="help.html">Help</a></li>
-          <li class="trans-right"><a href="book.html">Book</a></li>
+          <li class="trans-right"><a href="book.html" class="active">Book</a></li>
           <li class="trans-right"><a href="about.html">About</a></li>
           <li class="trans-right"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
   </header>
 
-  <main>
-    <section id="hero-section">
-      <p>Welcome to Pure Drive Fitness</p>
-    </section>
-
-    <section id="index-body">
-      <h3>What can I help with today?</h3>
-        <div id="main-links">
-          <div>
-            <a href="help.html#tone">
-              <p><i class="fa-solid fa-dumbbell rounded-logo"></i> Tone</p>                
-            </a>
-          </div>
-          <div class="right">
-            <a href="help.html#nutrition">
-              <p>Nutrition <i class="fa-solid fa-utensils rounded-logo"></i></p> 
-            </a>
-          </div>
-          <div>
-            <a href="help.html#weight">
-              <p><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p>
-            </a>
-          </div>
-          <div class="right">
-            <a href="help.html#training">
-              <p>Training <i class="fa-solid fa-stopwatch rounded-logo"></i></p>          
-            </a>
-          </div>
-        </div>
-      <div class="testimonial">
-        <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>   
-      </div>
-    </section>
+  <main id="main-book">
+    <h2>What do you want help with?</h2>
+    
   </main>
 
   <footer>
