--- a/help.html
+++ b/help.html
@@ -28,8 +28,8 @@
         <ul>
           <li class="trans-right"><a href="index.html">Home</a></li>
           <li class="trans-right"><a href="help.html" class="active">Help</a></li>
+          <li class="trans-right"><a href="book.html">Book</a></li>
           <li class="trans-right"><a href="about.html">About</a></li>
-          <li class="trans-right"><a href="faves.html">Faves</a></li>
           <li class="trans-right"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
