add content to book page

--- a/book.html
+++ b/book.html
@@ -36,8 +36,27 @@
   </header>
 
   <main id="main-book">
-    <h2>What do you want help with?</h2>
+    <h2>What sessions would you like to book?</h2>
+    <div class="container">
+      <div class="row">
+        <div class="block"><p><i class="fa-solid fa-dumbbell rounded-logo"></i>Tone</p></div>
+      </div>
+    </div>
     
+    <div class="container">
+      <div class="row">
+        <div class="block"><p><i class="fa-solid fa-utensils rounded-logo"></i>Nutrition</p> </div>
+        <div class="block"><p><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p></div>
+        <div class="block"><p><i class="fa-solid fa-stopwatch rounded-logo"></i>Training</p></div>
+      </div>
+    </div>
+    
+    <div class="container">
+      <div class="row">
+        <div class="block"><p><i class="fa-solid fa-utensils rounded-logo"></i>Nutrition</p> </div>
+        <div class="block"><p><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p></div>
+      </div>
+    </div>          
   </main>
 
   <footer>
