--- a/book.html
+++ b/book.html
@@ -39,22 +39,20 @@
     <h2>What sessions would you like to book?</h2>
     <div class="container">
       <div class="row">
-        <div class="block"><p><i class="fa-solid fa-dumbbell rounded-logo"></i>Tone</p></div>
+        <div class="block"><i class="fa-solid fa-dumbbell rounded-logo"></i><p>Tone Double Session</p></div>
       </div>
     </div>
-    
     <div class="container">
       <div class="row">
-        <div class="block"><p><i class="fa-solid fa-utensils rounded-logo"></i>Nutrition</p> </div>
-        <div class="block"><p><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p></div>
-        <div class="block"><p><i class="fa-solid fa-stopwatch rounded-logo"></i>Training</p></div>
+        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Session</p> </div>
+        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight Loss Session</p></div>
+        <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i><p>Training Session</p></div>
       </div>
     </div>
-    
     <div class="container">
       <div class="row">
-        <div class="block"><p><i class="fa-solid fa-utensils rounded-logo"></i>Nutrition</p> </div>
-        <div class="block"><p><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p></div>
+        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Extra Session</p> </div>
+        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight Loss Extra Session</p></div>
       </div>
     </div>          
   </main>
