add testimony div to bookings

--- a/book.html
+++ b/book.html
@@ -54,7 +54,10 @@
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Extra Session</p> </div>
         <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight Loss Extra Session</p></div>
       </div>
-    </div>          
+    </div> 
+    <div class="testimonial">
+      <p>"The moment you commit to something is the moment you achieve it"</p>   
+    </div>         
   </main>
 
   <footer>
