added contact text to booking page

--- a/book.html
+++ b/book.html
@@ -36,27 +36,31 @@
   </header>
 
   <main id="main-book">
-    <h2>What sessions would you like to book?</h2>
-    <div class="container">
+    <div class="booking-info">
+      <p>Booking with Pure Drive Fitness is really easy, simply contact me via my contact page or by using the methods below</p>
+      <p>Email: booking@pure-drive-fitness.com</p>
+      <p>Telephone: 07913 555 5555</p>  
+    </div><div class="container">
       <div class="row">
-        <div class="block"><i class="fa-solid fa-dumbbell rounded-logo"></i><p>Tone Double Session</p></div>
+        <div class="block"><h2>Featured Session</h2><i class="fa-solid fa-dumbbell rounded-logo"></i><p>Tone Double Session</p><p>£50</p></div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Session</p> </div>
-        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight Loss Session</p></div>
-        <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i><p>Training Session</p></div>
+        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Session</p><p>£30</p></div>
+        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight Loss Session</p><p>£30</p></div>
+        <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i><p>Training Session</p><p>£30</p></div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Extra Session</p> </div>
-        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight Loss Extra Session</p></div>
+        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition + Session</p><p>£40</p></div>
+        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight + Session</p><p>£40</p></div>
       </div>
     </div> 
+
     <div class="testimonial">
-      <p>"The moment you commit to something is the moment you achieve it"</p>   
+      <p>"Pure Drive Fitness sessions are great value for money and gave me just what i needed to get real results" Gil, Staffordshire</p>   
     </div>         
   </main>
 
