styled featured session

--- a/book.html
+++ b/book.html
@@ -42,9 +42,10 @@
       <p>Telephone: 07913 555 5555</p>  
     </div><div class="container">
       <div class="row">
-        <div class="block"><h2>Featured Session</h2><i class="fa-solid fa-dumbbell rounded-logo"></i><p>Tone Double Session</p><p>£50</p></div>
+        <div class="block" id="featured"><h2>Featured Session</h2><i class="fa-solid fa-dumbbell rounded-logo"></i><p>Tone Double Session</p><p>£50</p></div>
       </div>
     </div>
+    <h2>Other Sessions</h2>
     <div class="container">
       <div class="row">
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Session</p><p>£30</p></div>
