add small heading to help and booking

--- a/book.html
+++ b/book.html
@@ -36,8 +36,9 @@
   </header>
 
   <main id="main-book">
+    <h2 class="heading-sm">Booking</h2>
     <div class="booking-info">
-      <p>Booking with Pure Drive Fitness is really easy, simply contact me via my contact page or by using the methods below</p>
+      <p>Booking with Pure Drive Fitness is really easy. Simply contact me via my contact page or by using the methods below to check availability</p>
       <p>Email: booking@pure-drive-fitness.com</p>
       <p>Telephone: 07913 555 5555</p>  
     </div><div class="container">
