--- a/help.html
+++ b/help.html
@@ -36,7 +36,7 @@
   </header>
 
   <main id="main-help">
-    <h2>What do you want help with?</h2>
+    <h2 class="heading-sm">How We Can Help</h2>
     <p>Whatever type of help you want, success rates are always better when it is targetted, so, what do you want to focus on?</p>
     <div class="help-block" id="tone">
       <img src="assets/images/tone.jpg" alt="a person with no excess weight">
