added session info to booking

--- a/book.html
+++ b/book.html
@@ -38,10 +38,14 @@
   <main id="main-book">
     <h2 class="heading-sm">Booking</h2>
     <div class="booking-info">
-      <p>Booking with Pure Drive Fitness is really easy. Simply contact me via my contact page or by using the methods below to check availability</p>
-      <p>Email: booking@pure-drive-fitness.com</p>
+      <p>Booking with Pure Drive Fitness is really easy</p>
+      <br>
+      <p>Simply contact me via my contact page or by using the methods below to check availability</p>
+      <br>
+      <p>Email: booking@pdrive-fitness.com</p>
       <p>Telephone: 07913 555 5555</p>  
-    </div><div class="container">
+    </div>
+    <div class="container">
       <div class="row">
         <div class="block" id="featured"><h2>Featured Session</h2><i class="fa-solid fa-dumbbell rounded-logo"></i><p>Tone Double Session</p><p>£50</p></div>
       </div>
@@ -56,10 +60,17 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition + Session</p><p>£40</p></div>
-        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight + Session</p><p>£40</p></div>
+        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Super Session</p><p>£40</p></div>
+        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight Super Session</p><p>£40</p></div>
       </div>
     </div> 
+
+    <div class="booking-info">
+      <h3>Session Types</h3>
+      <p>Single - 1 hour</p>
+      <p>Double - 2 hours</p>
+      <p>Super - 90 minutes with a 30 minute follow up session</p>  
+    </div>
 
     <div class="testimonial">
       <p>"Pure Drive Fitness sessions are great value for money and gave me just what i needed to get real results" Gil, Staffordshire</p>   
