change letter styling to quote on booking

--- a/book.html
+++ b/book.html
@@ -38,8 +38,7 @@
   <main id="main-book">
     <h2 class="heading-sm">Booking</h2>
     <div class="booking-info">
-      <p>Booking with Pure Drive Fitness is really easy</p>
-      <br>
+      <p class="testimonial">"Booking with Pure Drive Fitness is really easy" Sarah, Worcester</p>
       <p>Simply contact me via my contact page or by using the methods below to check availability</p>
       <br>
       <p>Email: booking@pdrive-fitness.com</p>
