tidy format of booking page

--- a/book.html
+++ b/book.html
@@ -46,21 +46,41 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="block" id="featured"><h2>Featured Session</h2><i class="fa-solid fa-dumbbell rounded-logo"></i><p>Tone Double Session</p><p>£50</p></div>
+        <div class="block" id="featured">
+          <h2>Featured Session</h2>
+          <i class="fa-solid fa-dumbbell rounded-logo"></i>
+          <p>Tone Double Session</p>
+          <p>£50</p>
+        </div>
       </div>
     </div>
     <h2>Other Sessions</h2>
     <div class="container">
       <div class="row">
-        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Session</p><p>£30</p></div>
-        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight Loss Session</p><p>£30</p></div>
-        <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i><p>Training Session</p><p>£30</p></div>
+        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
+          <p>Nutrition Session</p>
+          <p>£30</p>
+        </div>
+        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
+          <p>Weight Loss Session</p>
+          <p>£30</p>
+        </div>
+        <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i>
+          <p>Training Session</p>
+          <p>£30</p>
+        </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i><p>Nutrition Super Session</p><p>£40</p></div>
-        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i><p>Weight Super Session</p><p>£40</p></div>
+        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
+          <p>Nutrition Super Session</p>
+          <p>£40</p>
+        </div>
+        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
+          <p>Weight Super Session</p>
+          <p>£40</p>
+        </div>
       </div>
     </div> 
 
