--- a/book.html
+++ b/book.html
@@ -46,11 +46,13 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="block" id="featured">
-          <h2>Featured Session</h2>
-          <i class="fa-solid fa-dumbbell rounded-logo"></i>
-          <p>Tone Double Session</p>
-          <p>£50</p>
+        <div class="block">
+          <div id="featured">
+            <h2>Featured Session</h2>
+            <i class="fa-solid fa-dumbbell rounded-logo"></i>
+            <p>Tone Double Session</p>
+            <p>£50</p>
+          </div>
         </div>
       </div>
     </div>
