correct content on booking page

--- a/book.html
+++ b/book.html
@@ -60,15 +60,15 @@
     <div class="container">
       <div class="row">
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
-          <p>Nutrition Session</p>
+          <p>Nutrition Single Session</p>
           <p>£30</p>
         </div>
         <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
-          <p>Weight Loss Session</p>
+          <p>Weight Loss Single Session</p>
           <p>£30</p>
         </div>
         <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i>
-          <p>Training Session</p>
+          <p>Training Single Session</p>
           <p>£30</p>
         </div>
       </div>
