--- a/about.html
+++ b/about.html
@@ -35,67 +35,8 @@
       </nav>
   </header>
 
-  <main id="main-book">
-    <h2 class="heading-sm">Booking</h2>
-    <div class="booking-info">
-      <p class="testimonial">"Booking with Pure Drive Fitness is really easy" Sarah, Worcester</p>
-      <p>Simply contact me via my contact page or by using the methods below to check availability</p>
-      <br>
-      <p>Email: booking@pdrive-fitness.com</p>
-      <p>Telephone: 07913 555 5555</p>  
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="block">
-          <div id="featured">
-            <h2>Featured Session</h2>
-            <i class="fa-solid fa-dumbbell rounded-logo"></i>
-            <p>Tone Double Session</p>
-            <p>£50</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <h2>Other Sessions</h2>
-    <div class="container">
-      <div class="row">
-        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
-          <p>Nutrition Single Session</p>
-          <p>£30</p>
-        </div>
-        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
-          <p>Weight Loss Single Session</p>
-          <p>£30</p>
-        </div>
-        <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i>
-          <p>Training Single Session</p>
-          <p>£30</p>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
-          <p>Nutrition Super Session</p>
-          <p>£40</p>
-        </div>
-        <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
-          <p>Weight Super Session</p>
-          <p>£40</p>
-        </div>
-      </div>
-    </div> 
-
-    <div class="booking-info">
-      <h3>Session Types</h3>
-      <p>Single - 1 hour</p>
-      <p>Double - 2 hours</p>
-      <p>Super - 90 minutes with a 30 minute follow up session</p>  
-    </div>
-
-    <div class="testimonial">
-      <p>"Pure Drive Fitness sessions are great value for money and gave me just what i needed to get real results" Gil, Staffordshire</p>   
-    </div>         
+  <main id="main-about">
+    
   </main>
 
   <footer>
