added laura pic to images folder

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
   <main id="main-about">
     <h2 class="heading-sm">About Me</h2>
     <div>
-      <img src="assets/images/tone.jpg" alt="a picture of laura smiling" class="profile-pic">
+      <img src="assets/images/laura.jpg" alt="a picture of laura smiling" class="profile-pic">
       <p class="testimonial">Allow me to introduce myself - I am Laura, a dedicated and passionate personal trainer here to help you embark on an incredible fitness journey.</p>
       <p>I understand that beginning a fitness regimen can be both exciting and overwhelming. That's where I come in! With my extensive knowledge in exercise science, nutrition, and personalised training techniques, I am committed to creating a tailored program that suits your unique needs and aspirations.</p>
       <br>
