added pic of someone taking first steps to about

--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
       <br>
       <p>So, if you're ready to embark on a transformative fitness journey filled with positive energy, personal growth, and incredible results, I invite you to take the first step. Together, we will conquer challenges, celebrate victories, and create a sustainable lifestyle that will leave you feeling stronger, more confident, and truly alive.</p>
       <br>
+      <img src="assets/images/steps.jpg" alt="a picture of someone walking" class="profile-pic-steps">
       <p>I look forward to meeting you and embarking on this incredible journey together. Let's take the first step towards a healthier, happier you!</p>
       <p class="testimonial">Yours in health, Laura</p>
     </div>
