add img tag for phone pic

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   <main id="main-contact">
     <h2 class="heading-sm">Contact Me</h2>
     <div>
-      
+      <img src="assets/images/phone.jpg" alt="a picture of an old phone" class="profile-pic">
   </main>
 
   <footer>
