add radio button section to contact

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,17 @@
     
       <label for="age">Age:</label>
       <input type="number" id="age" name="age">
-
+      <label>What is your main goal?:</label> 
+      <div class="radio">
+      <input type="radio" id="weight-loss" name="goal" value="weight-loss">
+      <label for="weight-loss">Weight Loss</label><br>
+      <input type="radio" id="toning" name="goal" value="toning">
+      <label for="toning">Toning</label><br>
+      <input type="radio" id="muscle-gain" name="goal" value="muscle-gain">
+      <label for="muscle-gain">Muscle Gain</label><br>
+      <input type="radio" id="training" name="goal" value="training">
+      <label for="training">Training</label><br>
+      </div>
       <input type="submit" value="Submit" id="submit">
     </form>
   </main>
