add contact text to bottom of contact page

--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,12 @@
       <input type="submit" value="Submit" id="submit">
     </form>
   </main>
-
-  <footer>
+  <div>
+    <p>You can also contact me via the methods below to check availability</p>
+    <p>Email: booking@pdrive-fitness.com</p>
+    <p>Telephone: 07913 555 5555</p>
+  </div>
+    <footer>
       <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
       <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
       <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-x-twitter trans"></i></a>
