added more contact test and format

--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,11 @@
   </main>
   <div id="contact-footer">
     <p>You can also contact me via the methods below to check availability</p>
+    <br>
     <p>Email: booking@pdrive-fitness.com</p>
     <p>Telephone: 07913 555 5555</p>
+    <br>
+    <p>Sessions are held at Bannatyne Health Club, Shrewsbury</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2376.682990321252!2d-2.752369303510669!3d52.69200191028757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487a9e3861c30e53%3A0xe29d052caf8bac1!2sBannatyne%20Health%20Club!5e0!3m2!1sen!2suk!4v1698675839219!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
     <footer>
