add sidebar images to contact

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,8 @@
 
   <main id="main-contact">
     <h2 class="heading-sm">Contact Me</h2>
+    <img src="assets/images/background.jpg" alt="a picture of a phone" class="sidebar">
+    <img src="assets/images/background1.jpg" alt="a picture of a phone" class="sidebar">
     <div>
       <img src="assets/images/phone.jpg" alt="a picture of a phone" class="contact-pic">
     </div>
