ad=just font sizes for different media

--- a/help.html
+++ b/help.html
@@ -38,7 +38,7 @@
   <main id="main-help">
     <h2 class="heading-sm">How We Can Help</h2>
     <div>
-      <p>Whatever type of help you want, success rates are always better when it is targetted, so, what do you want to focus on?</p>
+      <p class="testimonial">Whatever type of help you want, success rates are always better when it is targetted, so, what do you want to focus on?</p>
       <div class="help-block" id="tone">
         <img src="assets/images/tone.jpg" alt="a person with no excess weight">
         <div class="overlay-text"><h3>Tone</h3>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</div>
